<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="todo">TODO</string>
    <string name="title_text">Playlist maker</string>
    <string name="search_btn_text">Поиск</string>
    <string name="media_btn_text">Медиатека</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="sharing_settings_text">Поделиться приложением</string>
    <string name="help_settings_text">Написать в поддержку</string>
    <string name="agreement_settings_text">Пользовательское соглашение</string>
</resources>