<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_color_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/title_text"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/button_textSize"
        android:fontFamily="@font/ys_display"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/button_marginBottom"
            android:layout_weight="3"
            android:backgroundTint="@color/white"
            android:text="@string/search_btn_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_textSize"
            app:cornerRadius="@dimen/button_cornerRadius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:fontFamily="@font/ys_display" />

        <Button
            android:id="@+id/button_media"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/button_marginBottom"
            android:layout_weight="3"
            android:backgroundTint="@color/white"
            android:text="@string/media_btn_text"
            android:textColor="@color/black"
            android:textSize="@dimen/button_textSize"
            app:cornerRadius="@dimen/button_cornerRadius"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:fontFamily="@font/ys_display"/>

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/button_marginBottom"
            android:layout_weight="3"
            android:backgroundTint="@color/white"
            android:text="@string/settings_title"
            android:textColor="@color/black"
            android:textSize="@dimen/button_textSize"
            app:cornerRadius="@dimen/button_cornerRadius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            android:fontFamily="@font/ys_display"/>

    </LinearLayout>

</LinearLayout>